[package]
name = "muxeo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = [
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec", "io"] }
